--- a/Backend/.env
+++ b/Backend/.env
@@ -3,3 +3,4 @@ CLOUDINARY_API_KEY= test
 CLOUDINARY_SECRET_KEY= test
 MONGO_URI=mongodb://localhost:27017/futball
 JWT_SECRET_KEY= test
+ADMIN_ID = 67f001c2c345695276466f83
